@@ -395,7 +395,7 @@ int main(int argc, char **argv)
 
     /* close session manager connection */
     c2s->shutting_down = 1;
-    conn_close(c2s->sm, STREAM_ERR_SYSTEM_SHUTDOWN, "shutting down jadc2s");
+    conn_close(c2s->sm, NULL, NULL);
 
     /* exiting, clean up */
     mio_free(c2s->mio);
